added mongodb setup, testing script

--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,8 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+# random notebooks
+.ipynb
 
 # pyenv
 .python-version
@@ -109,3 +111,9 @@ ENV/
 **/**.db
 .vec
 .db
+
+# logging
+tests/*.out
+tests/*.err
+.out
+.err
