added queueing, updated requirements, refactored code

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,10 @@ word2vec/*.db
 
 # Local development Related Files
 tattle-api-google.json
+
+# Mac files
+.DS_Store
+
+# Word2Vec files
+src/indexer/word2vec
+src/api-server/word2vec
