--- a/src/api-server/requirements.in
+++ b/src/api-server/requirements.in
@@ -12,7 +12,8 @@ fasttext
 torch==1.2.0
 torchvision==0.4.0
 textblob
-Pillow==6.1
+Pillow==7.1.0
 opencv-contrib-python==4.4.0.42
 elasticsearch
 wget==3.2
+pika==1.1.0
