--- a/src/api-server/requirements.txt
+++ b/src/api-server/requirements.txt
@@ -54,8 +54,9 @@ urllib3==1.25.8           # via requests
 werkzeug==1.0.0           # via flask
 wget==3.2
 pika==1.1.0
-opencv-contrib-python==4.4.0.42
+opencv-python-headless
 elasticsearch
+ffmpy==0.2.3
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
