enable multistage builds & leaner images

--- a/src/indexer/Dockerfile
+++ b/src/indexer/Dockerfile
@@ -1,20 +1,38 @@
-FROM python:3.7-slim
+FROM python:3.7-slim as builder
 
-WORKDIR /app
-COPY . /app
-
-RUN apt-get update
-RUN apt-get -y upgrade
-
-RUN apt-get install -y --no-install-recommends gcc build-essential 
-RUN apt-get install -y libgl1-mesa-glx libglib2.0-0
-RUN apt-get install -y ffmpeg
+RUN apt-get update \
+&& apt-get -y upgrade \
+&& apt-get install -y \
+    --no-install-recommends gcc build-essential \
+    --no-install-recommends libgl1-mesa-glx libglib2.0-0 \
+&& apt-get purge -y --auto-remove \
+    gcc build-essential \
+    libgl1-mesa-glx libglib2.0-0 \
+&& rm -rf /var/lib/apt/lists/* 
+# RUN apt-get install -y ffmpeg
 
 # This is only for debugging in dev mode. Uncomment in production
 RUN apt-get install -y vim
 
 RUN pip install --upgrade pip
-RUN pip install --no-cache-dir -r requirements.txt
+
+# RUN pip install --no-cache-dir -r requirements.txt
+# RUN pip install pip-tools
+# COPY requirements.in /app/requirements.in
+COPY requirements.txt /app/requirements.txt
+WORKDIR /app
+# RUN pip-compile requirements.in
+RUN pip install --user -r requirements.txt
+# COPY . /app
+
+FROM jrottenberg/ffmpeg:4.0-scratch AS ffmpeg
+
+FROM python:3.7-slim AS indexer_prod
+COPY --from=ffmpeg / /
+COPY --from=builder /root/.local /root/.local
+COPY . /app
+WORKDIR /app
+ENV PATH=/root/.local/bin:$PATH
 
 CMD python receive.py
 # CMD tail -f /dev/null
