--- a/src/api-server/Dockerfile
+++ b/src/api-server/Dockerfile
@@ -1,26 +1,40 @@
-FROM python:3.7-slim
+FROM python:3.7-slim AS builder
 
-WORKDIR /app
-COPY . /app
-
-RUN apt-get update
-RUN apt-get -y upgrade
-RUN apt-get install -y --no-install-recommends gcc build-essential 
-RUN apt-get install -y libgl1-mesa-glx libglib2.0-0
-RUN apt-get install -y ffmpeg
+RUN apt-get update \
+&& apt-get -y upgrade \
+&& apt-get install -y \
+    --no-install-recommends gcc build-essential \
+    libgl1-mesa-glx libglib2.0-0 \
+&& apt-get purge -y --auto-remove \
+    gcc build-essential \
+    libgl1-mesa-glx libglib2.0-0 \
+&& rm -rf /var/lib/apt/lists/* 
+# RUN apt-get install -y ffmpeg
 
 # This is only for debugging in dev mode. Uncomment in production
 RUN apt-get install -y vim
 
 RUN pip install --upgrade pip
-RUN pip install pip-tools
-RUN pip-compile requirements.in
-RUN pip install --no-cache-dir -r requirements.txt
 
-#RUN mkdir -p /var/data/models
+# RUN pip install --no-cache-dir -r requirements.txt
+# RUN pip install pip-tools
+# COPY requirements.in /app/requirements.in
+COPY requirements.txt /app/requirements.txt
+WORKDIR /app
+# RUN pip-compile requirements.in
+RUN pip install --user -r requirements.txt
+# COPY . /app
+
+FROM jrottenberg/ffmpeg:4.0-scratch AS ffmpeg
+
+FROM python:3.7-slim AS server_prod
+COPY --from=ffmpeg / /
+COPY --from=builder /root/.local /root/.local
+COPY . /app
+WORKDIR /app
+ENV PATH=/root/.local/bin:$PATH
 
 EXPOSE 7000
 
-# CMD gunicorn --preload -w 2 --threads 1 --bind 0.0.0.0:5000 application:application
 # CMD python application.py
 CMD tail -f /dev/null
