--- a/src/indexer/Dockerfile
+++ b/src/indexer/Dockerfile
@@ -5,14 +5,12 @@ RUN apt-get update \
 && apt-get install -y \
     --no-install-recommends gcc build-essential \
     --no-install-recommends libgl1-mesa-glx libglib2.0-0 \
+    # Vim is only for debugging in dev mode. Uncomment in production
+    vim \
 && apt-get purge -y --auto-remove \
     gcc build-essential \
     libgl1-mesa-glx libglib2.0-0 \
 && rm -rf /var/lib/apt/lists/* 
-# RUN apt-get install -y ffmpeg
-
-# This is only for debugging in dev mode. Uncomment in production
-RUN apt-get install -y vim
 
 RUN pip install --upgrade pip
 
@@ -23,7 +21,6 @@ COPY requirements.txt /app/requirements.txt
 WORKDIR /app
 # RUN pip-compile requirements.in
 RUN pip install --user -r requirements.txt
-# COPY . /app
 
 FROM jrottenberg/ffmpeg:4.0-scratch AS ffmpeg
 
