--- a/src/api-server/.env-template.local
+++ b/src/api-server/.env-template.local
@@ -1,13 +1,13 @@
+MQ_USERNAME=XXXXXX
+MQ_PASSWORD=XXXXXX
+MQ_HOST=rabbitmq
 AWS_ACCESS_KEY_ID=XXXXXX
 AWS_SECRET_ACCESS_KEY=XXXXX
-AWS_REGION=us-east-2
+AWS_BUCKET=XXXXX
+S3_CREDENTIALS_PATH = XXXXX/XXXXX
 MONGO_URL=mongodb://mongo:27017
-GOOGLE_APPLICATION_CREDENTIALS=XXXXX
+GOOGLE_APPLICATION_CREDENTIALS="credentials.json"
 ES_HOST=elasticsearch
 ES_IMG_INDEX=imgsearch
 ES_TXT_INDEX=txtsearch
 ES_VID_INDEX=vidsearch
-MQ_USERNAME=XXXXX
-MQ_PASSWORD=XXXXX
-MQ_HOST=rabbitmq
-
