pass mongo db, collection names as env variables

--- a/src/api-server/.env-template.local
+++ b/src/api-server/.env-template.local
@@ -6,6 +6,8 @@ AWS_SECRET_ACCESS_KEY=XXXXX
 AWS_BUCKET=XXXXX
 S3_CREDENTIALS_PATH = XXXXX/XXXXX
 MONGO_URL=mongodb://mongo:27017
+DB_NAME = XXXXX
+DB_COLLECTION = XXXXX
 GOOGLE_APPLICATION_CREDENTIALS="credentials.json"
 ES_HOST=elasticsearch
 ES_IMG_INDEX=imgsearch
