fixed mongo local host

--- a/src/indexer/.env-template
+++ b/src/indexer/.env-template
@@ -5,7 +5,7 @@ AWS_ACCESS_KEY_ID=XXXXXX
 AWS_SECRET_ACCESS_KEY=XXXXX
 AWS_BUCKET=XXXXX
 S3_CREDENTIALS_PATH = XXXXX/XXXXX
-MONGO_URL=mongodb://mongo:27017
+MONGO_URL=mongodb://localhost:27017/
 DB_NAME = XXXXX
 DB_COLLECTION = XXXXX
 GOOGLE_APPLICATION_CREDENTIALS="credentials.json"
