changed local ES host for development

--- a/src/indexer/.env-template
+++ b/src/indexer/.env-template
@@ -9,7 +9,7 @@ MONGO_URL=mongodb://localhost:27017/
 DB_NAME = XXXXX
 DB_COLLECTION = XXXXX
 GOOGLE_APPLICATION_CREDENTIALS="credentials.json"
-ES_HOST=elasticsearch
+ES_HOST=localhost
 ES_IMG_INDEX=imgsearch
 ES_TXT_INDEX=txtsearch
 ES_VID_INDEX=vidsearch
