--- a/src/api-server/Dockerfile
+++ b/src/api-server/Dockerfile
@@ -3,20 +3,19 @@ FROM python:3.7-slim AS builder
 RUN apt-get update \
     && apt-get -y upgrade \
     && apt-get install -y \
-    --no-install-recommends gcc build-essential \
-    libgl1-mesa-glx libglib2.0-0 \
-    # Vim is only for debugging in dev mode. Uncomment in production
-    vim \
+        --no-install-recommends gcc build-essential \
+        --no-install-recommends libgl1-mesa-glx libglib2.0-0 \
+        # Vim is only for debugging in dev mode. Uncomment in production
+        vim \
     && apt-get purge -y --auto-remove \
-    gcc build-essential \
-    libgl1-mesa-glx libglib2.0-0 \
+        gcc build-essential \
+        libgl1-mesa-glx libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/* 
 
 RUN pip install --upgrade pip
 
 COPY requirements.txt /app/requirements.txt
 WORKDIR /app
-
 RUN pip install --user -r requirements.txt
 
 FROM jrottenberg/ffmpeg:4.0-scratch AS ffmpeg
