--- a/src/indexer/requirements.txt
+++ b/src/indexer/requirements.txt
@@ -43,6 +43,7 @@ rsa==4.6                  # via google-auth
 scikit-image==0.15.0      # via -r requirements.in
 scipy==1.5.3              # via scikit-image
 six==1.15.0               # via cycler, google-api-core, google-auth, grpcio, protobuf, python-dateutil, torchvision
+sentence-transformers==0.4.1.2
 textblob==0.15.3          # via -r requirements.in
 torch==1.2.0              # via -r requirements.in, torchvision
 torchvision==0.4.0        # via -r requirements.in
