--- a/src/api-server/.env-template
+++ b/src/api-server/.env-template
@@ -5,11 +5,10 @@ AWS_ACCESS_KEY_ID=XXXXXX
 AWS_SECRET_ACCESS_KEY=XXXXX
 AWS_BUCKET=XXXXX
 S3_CREDENTIALS_PATH = XXXXX/XXXXX
-MONGO_URL=mongodb://localhost:27017/
-DB_NAME = XXXXX
-DB_COLLECTION = XXXXX
 GOOGLE_APPLICATION_CREDENTIALS="credentials.json"
 ES_HOST=localhost
+ES_USERNAME=XXXXX
+ES_PASSWORD=XXXXX
 ES_IMG_INDEX=imgsearch
 ES_TXT_INDEX=txtsearch
 ES_VID_INDEX=vidsearch
