--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,7 @@ credentials.json
 
 # Docker logs
 .docker/*
+src/api/sample_data/
+# a temporary folder made by denny.
+# it is safe to delete this line if you no longer see this folder in the root folder
+_docs
