--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,51 @@
 version: "3.5"
 
 services:
-    # elasticsearch:
-    #     container_name: es
-    #     image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
-    #     volumes:
-    #         - ./.docker/es/data:/usr/share/elasticsearch/data
-    #     ports:
-    #         - "9300:9300"
-    #         - "9200:9200"
-    #     environment:
-    #         - xpack.security.enabled=false
-    #         - discovery.type=single-node
-    #     ulimits:
-    #         memlock:
-    #             soft: -1
-    #             hard: -1
-    #         nofile:
-    #             soft: 65536
-    #             hard: 65536
-    #     cap_add:
-    #         - IPC_LOCK
+  elasticsearch:
+    container_name: es
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
+    volumes:
+      - ./.docker/es/data:/usr/share/elasticsearch/data
+    ports:
+      - "9300:9300"
+      - "9200:9200"
+    environment:
+      - xpack.security.enabled=false
+      - discovery.type=single-node
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    cap_add:
+      - IPC_LOCK
 
-    api:
-        container_name: api
-        build:
-            context: ./src/api
-            dockerfile: Dockerfile
-            target: debug
-        volumes:
-            - ./src/api:/app
-        env_file: ./src/api/development.env
-        ports:
-            - 7000:7000
-        command: tail -f /dev/null
+  rabbitmq:
+    image: rabbitmq:3.8.7-management
+    container_name: rabbitmq
+    hostname: rabbit
+    volumes:
+      - ./.docker/rabbitmq/data/:/var/lib/rabbitmq/
+      - ./.docker/rabbitmq/logs/:/var/log/rabbitmq/
+    environment:
+      RABBITMQ_ERLANG_COOKIE: "secret-cookie"
+      RABBITMQ_DEFAULT_USER: "admin"
+      RABBITMQ_DEFAULT_PASS: "Admin123"
+    ports:
+      - 5672:5672
+      - 15672:15672
+
+  api:
+    container_name: api
+    build:
+      context: ./src/api
+      dockerfile: Dockerfile
+      target: debug
+    volumes:
+      - ./src/api:/app
+    env_file: ./src/api/development.env
+    ports:
+      - 7000:7000
+    command: tail -f /dev/null
