testing API endpoints with json and file sent in one request

--- a/src/api/config.yml
+++ b/src/api/config.yml
@@ -1,10 +1,11 @@
 store :
   label : "Data Store"
-  type : "es"
+  type : "es_vec"
   parameters:
-    - image_index_name : "imgsearch"
-    - text_index_name : "txtsearch"
-    - video_index_name : "vidsearch"
+    - host_name : "es"
+    - image_index_name : "image"
+    - text_index_name : "text"
+    - video_index_name : "video"
 
 queue : 
   label : "Rabbit MQ Queue"
