--- a/src/api/config.yml
+++ b/src/api/config.yml
@@ -29,25 +29,19 @@ index :
       - image
       - video 
     operators : 
-    - name : "image indexer"
-      media_type : "image"
-      type : "composite_image_text_indexer"
-      parameters:
-        dimension : 256
-    - name : "text indexer"
-      media_type : "text"
-      type : "text_fulltext_rep"
-      parameters:
-        dimension : 256
-    - name : "video indexer"
-      media_type : "video"
-      type : "vid_vec_rep_resnet"
-      parameters:
-        max_length : "2min"
-        max_size : "5mb"
-        max_resolution: 
-          width : 1024
-          height : 1024
+      - name : "Text Vector Representation"
+        type : "text_vec_rep_paraphrase_lxml"
+        parameters: {}
+      - name : "Language Detection"
+        type : "detect_lang_of_text"
+        parameters: {}
+      - name : "Text Extraction"
+        type : "detect_text_in_image"
+        parameters: {}
+      - name : "Image Vector Representation"
+        type : "image_vec_rep_resnet"
+        parameters: {}
+
 
 search : 
   label : "Search"
