feat : add logger and documentation. add queue

--- a/src/api/config.yml
+++ b/src/api/config.yml
@@ -9,6 +9,10 @@ store :
 
 queue : 
   label : "Rabbit MQ Queue"
+  parameters: 
+    host_name : "rabbitmq"
+    index_queue_name : "tattle-search-index-queue"
+    report_queue_name : "tattle-search-report-queue"
 
 logger : 
   label : "Logger"
