feat : test end to end index endpoint

--- a/src/api/config.yml
+++ b/src/api/config.yml
@@ -29,6 +29,9 @@ server :
 operators : 
   label : "Server"
   parameters :
+    - name : "Text Vector Representation"
+      type : "text_vec_rep_paraphrase_lxml"
+      parameters: {}
     - name : "Language Detection"
       type : "detect_lang_of_text"
       parameters: {}
