feat: test end to end indexing for text, image and video

--- a/src/api/config.yml
+++ b/src/api/config.yml
@@ -38,4 +38,6 @@ operators :
       parameters: {}
     - name : "Video Vector Representation"
       type : "vid_vec_rep_resnet"
-      parameters: {}
+      parameters: {
+        index_name : "video"
+      }
