feat: indexing via worker in place

--- a/src/api/config-indexer.yml
+++ b/src/api/config-indexer.yml
@@ -12,21 +12,13 @@ queue :
   type : "rabbitmq"
   parameters: 
     host_name : "rabbitmq"
-    index_queue_name : "tattle-search-index-queue"
-    report_queue_name : "tattle-search-report-queue"
-
-server : 
-  label : "Server"
-  parameters :
-    port : 7000
-    type : "http"
+    queues:
+      - name : "tattle-search-index-queue"
+      - name : "tattle-search-report-queue"
 
 operators : 
   label : "Operators"
   parameters :
-    # - name : "Text Vector Representation"
-    #   type : "text_vec_rep_paraphrase_lxml"
-    #   parameters: {}
     - name : "Language Detection"
       type : "detect_lang_of_text"
       parameters: {}
