--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -34,7 +34,7 @@ ffmpy==0.2.3
     # via -r requirements.in
 filelock==3.0.12
     # via transformers
-flask==1.0
+flask==2.0.2
     # via
     #   -r requirements.in
     #   flask-cors
@@ -58,10 +58,10 @@ imageio==2.9.0
     # via scikit-image
 importlib-metadata==3.10.0
     # via transformers
-itsdangerous==1.1.0
-    # via flask
-jinja2==2.11.3
-    # via flask
+itsdangerous==2.0.1
+    # via flask. manually changed 
+jinja2==3.0.3
+    # via flask. manually changed
 jmespath==0.10.0
     # via
     #   boto3
@@ -73,8 +73,8 @@ joblib==1.0.1
     #   scikit-learn
 kiwisolver==1.3.1
     # via matplotlib
-markupsafe==1.1.1
-    # via jinja2
+markupsafe==2.0.1
+    # via jinja2. manually set
 matplotlib==3.4.1
     # via scikit-image
 networkx==2.5.1
@@ -206,12 +206,15 @@ urllib3==1.26.4
     #   botocore
     #   elasticsearch
     #   requests
-werkzeug==1.0.1
+werkzeug==2.0.2
     # via flask
+    # manually changed 
 wget==3.2
     # via -r requirements.in
 zipp==3.4.1
     # via importlib-metadata
-
+dacite==1.6.0
+PyYAML==6.0
+    # added manually by denny. these might get overwritten
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
