feat: add NER, add text search, add Not Implemented http response for raw query - Added an operator to do Named Entity Recognition on non-english text - Created a test and handler to respond to text queries - Deferred the raw query search for later. It returns an HTTP response 501 now to denote that it hasnot been implemented

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,3 +83,9 @@ services:
         condition: service_started
       queue:
         condition: service_started
+#     networks:
+#       - kosh-v2_kosh
+
+# networks:
+#   kosh-v2_kosh:
+#     external: true
