--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -1,37 +1,9 @@
 version: "3.5"
 
 services:
-  indexer:
-    container_name: search_indexer
-    build:
-      context: ./src/indexer
-      dockerfile: Dockerfile
-      target: indexer_prod
-    shm_size: "8gb"
-    # ipc: host
-    volumes:
-      - ./src/indexer/:/app
-    env_file: ./src/indexer/development.env
-    command: tail -f /dev/null
-
-  search_api:
-    container_name: search_api
-    build:
-      context: ./src/api-server
-      dockerfile: Dockerfile
-      target: server_base
-    shm_size: "8gb"
-    # ipc: host
-    volumes:
-      - ./src/api-server:/app
-    env_file: ./src/api-server/development.env
-    ports:
-      - 7000:7000
-    command: tail -f /dev/null
-
-  elasticsearch:
+  store:
     container_name: es
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.4.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
     volumes:
       - ./.docker/es/data:/usr/share/elasticsearch/data
     ports:
@@ -50,18 +22,16 @@ services:
     cap_add:
       - IPC_LOCK
 
-  rabbitmq:
-    image: rabbitmq:3.8.7-management
-    container_name: rabbitmq
-    hostname: rabbit
+  api:
+    container_name: api
+    build:
+      context: ./src/api
+      dockerfile: Dockerfile
+      target: debug
     volumes:
-      - ./.docker/rabbitmq/etc/:/etc/rabbitmq/
-      - ./.docker/rabbitmq/data/:/var/lib/rabbitmq/
-      - ./.docker/rabbitmq/logs/:/var/log/rabbitmq/
-    environment:
-      RABBITMQ_ERLANG_COOKIE: "secret-cookie"
-      RABBITMQ_DEFAULT_USER: "admin"
-      RABBITMQ_DEFAULT_PASS: "Admin123"
+      - ./src/api:/app
+    env_file: ./src/api/development.env
     ports:
-      - 5672:5672
-      - 15672:15672
+      - 7000:7000
+      - 5678:5678
+    command: tail -f /dev/null
