--- a/src/api/config-indexer.yml
+++ b/src/api/config-indexer.yml
@@ -25,6 +25,9 @@ operators :
     - name : "Text Extraction"
       type : "detect_text_in_image"
       parameters: {}
+    - name : "Named Entity Extraction"
+      type : "ner_extraction"
+      parameters: {}
     - name : "Image Vector Representation"
       type : "image_vec_rep_resnet"
       parameters: {}
