--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -1,16 +1,15 @@
-name: Deploy to Staging
+name: Deploy to Production
 
 on:
   push:
     branches:
-      - development
+      - master
 
 jobs:
   changes:
     runs-on: ubuntu-latest
     outputs:
-      api-server: ${{ steps.filter.outputs.api-server }}
-      indexer: ${{ steps.filter.outputs.indexer }}
+      api: ${{ steps.filter.outputs.api}}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -19,15 +18,13 @@ jobs:
         id: filter
         with:
           filters: |
-            api-server:
-                - 'src/api-server/**/*'
-            indexer:
-                - 'src/indexer/**/*'
+            api:
+                - 'src/api/**/*'
 
-  api-server:
+  api:
     runs-on: ubuntu-latest
     needs: changes
-    if: ${{ needs.changes.outputs.api-server == 'true' }}
+    if: ${{ needs.changes.outputs.api == 'true' }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -43,20 +40,33 @@ jobs:
         with:
           username: tattletech
           password: ${{ secrets.DOCKER_PASSWORD }}
-          name: tattletech/tattle-search-api-rest
+          name: tattletech/feluda-server
           tags: ${{ steps.vars.outputs.sha_short }}
-          workdir: src/api-server/
+          workdir: src/api/
+
+      - uses: actions/checkout@master
+      - name: deploy to cluster
+        uses: steebchen/kubectl@v2.0.0
+        with: # defaults to latest kubectl binary version
+          config: ${{ secrets.PROD_KUBE_CONFIG_DATA }}
+          command: set image --record deployment/feluda-server feluda-server=feluda-api:${{ github.sha }}
+      - name: verify deployment
+        uses: steebchen/kubectl@v2.0.0
+        with:
+          config: ${{ secrets.PROD_KUBE_CONFIG_DATA }}
+          version: v1.21.0 # specify kubectl binary version explicitly
+          command: rollout status deployment/feluda-api
 
   notify:
     runs-on: ubuntu-latest
-    needs: [api-server, indexer]
+    needs: [api]
     if: ${{ always() }}
     steps:
       - name: Notify on Slack
         uses: rtCamp/action-slack-notify@v2.0.0
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_MESSAGE: "Deployed Tattle API to Staging"
-          SLACK_TITLE: "Tattle API staging-deploy workflow complete"
+          SLACK_MESSAGE: "Deploy Feluda Production"
+          SLACK_TITLE: "Deploy Feluda Production  workflow complete"
           SLACK_COLOR: "#020637"
           SLACK_ICON: https://tattle-media.s3.amazonaws.com/monogram-dark.svg
