--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       api: ${{ steps.filter.outputs.api}}
+      docs: ${{ steps.filter.outputs.docs }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -20,6 +21,8 @@ jobs:
           filters: |
             api:
                 - 'src/api/**/*'
+            docs:
+                - 'docs/**/*'
 
   api:
     runs-on: ubuntu-latest
@@ -51,17 +54,45 @@ jobs:
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.PROD_KUBE_CONFIG_DATA }}
-          command: set image --record deployment/feluda-server feluda-server=feluda-api:${{ github.sha }}
+          command: set image --record deployment/feluda-server feluda-server=feluda-api:${{ steps.vars.outputs.sha_short }}
       - name: verify deployment
         uses: steebchen/kubectl@v2.0.0
         with:
           config: ${{ secrets.PROD_KUBE_CONFIG_DATA }}
           version: v1.21.0 # specify kubectl binary version explicitly
-          command: rollout status deployment/feluda-api
+          command: rollout status deployment/feluda-server
+
+  docs:
+    runs-on: ubuntu-latest
+    needs: changes
+    if: ${{ needs.changes.outputs.docs == 'true' }}
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: master
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
+      - name: Install Packages
+        run: |
+          cd docs/ 
+          npm install --legacy-peer-deps
+
+      - name: Build Site
+        run: |
+          cd docs/
+          npm run build
+      - name: Deploy Site
+        run: |
+          cd docs/
+          npm run deploy 
 
   notify:
     runs-on: ubuntu-latest
-    needs: [api]
+    needs: [api, docs]
     if: ${{ always() }}
     steps:
       - name: Notify on Slack
