--- a/docs/package.json
+++ b/docs/package.json
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby-plugin-s3 deploy --yes"
   },
   "dependencies": {
     "@deckdeckgo/highlight-code": "^3.4.1",
@@ -23,6 +24,7 @@
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-mdx": "^3.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-s3": "^0.3.8",
     "gatsby-plugin-sharp": "^4.0.1",
     "gatsby-plugin-styled-components": "^5.0.0",
     "gatsby-remark-highlight-code": "^3.0.1",
