--- a/.gitignore
+++ b/.gitignore
@@ -121,8 +121,8 @@ credentials.json
 
 # Docker logs
 .docker/*
-src/api/core/operators/sample_data/
-sample_data/**
+# src/api/core/operators/sample_data/
+# sample_data/**
 # a temporary folder made by denny.
 # it is safe to delete this line if you no longer see this folder in the root folder
 _docs
