--- a/src/api/requirements.in
+++ b/src/api/requirements.in
@@ -1,22 +1,22 @@
-flask==2.0.1 
-flask_cors==3.0.0
+flask==2.3.2
+flask_cors==3.0.9
 google-cloud==0.34.0
-google-cloud-vision==0.34.0
-scikit-image==0.15.0
-tqdm
-torch==1.7.1+cpu
-torchvision==0.8.2+cpu
-textblob
-Pillow==7.1.0
-opencv-python-headless
-elasticsearch
+google-cloud-vision==3.5.0
+scikit-image==0.22.0
+tqdm==4.66.1
+torch==2.1.2+cpu
+torchvision==0.16.2+cpu
+textblob==0.17.1
+Pillow==10.2.0
+opencv-python-headless==4.9.0.80
+elasticsearch==8.11.1
 wget==3.2
-pika==1.1.0
+pika==1.3.2
 ffmpy==0.2.3
-sentence-transformers==1.0.4
-python-dotenv
-boto3
-click
-typing-extensions
-pytest
-PyYAML==5.4.1
+sentence-transformers==2.2.2
+python-dotenv==1.0.0
+boto3==1.34.19
+click==8.1.7
+typing-extensions==4.9.0
+pytest==7.4.4
+PyYAML==6.0.1
