--- a/src/api/config-server.yml
+++ b/src/api/config-server.yml
@@ -28,15 +28,15 @@ operators :
     # - name : "Text Vector Representation"
     #   type : "text_vec_rep_paraphrase_lxml"
     #   parameters: {}
-    - name : "Language Detection"
-      type : "detect_lang_of_text"
-      parameters: {}
-    - name : "Named Entity Extraction"
-      type : "ner_extraction"
-      parameters: {}
-    - name : "Text Extraction"
-      type : "detect_text_in_image"
-      parameters: {}
+#    - name : "Language Detection"
+#      type : "detect_lang_of_text"
+#      parameters: {}
+#    - name : "Named Entity Extraction"
+#      type : "ner_extraction"
+#      parameters: {}
+#    - name : "Text Extraction"
+#      type : "detect_text_in_image"
+#      parameters: {}
     - name : "Image Vector Representation"
       type : "image_vec_rep_resnet"
       parameters: {}
