--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -16,7 +16,7 @@ botocore==1.34.19
     #   s3transfer
 cachetools==4.2.1
     # via google-auth
-certifi==2023.7.22
+certifi==2023.11.17
     # via
     #   elastic-transport
     #   requests
@@ -27,13 +27,15 @@ click==8.1.7
     #   -r requirements.in
     #   flask
     #   nltk
+dacite==1.8.1
+    # via -r requirements.in
 elastic-transport==8.11.0
     # via elasticsearch
 elasticsearch==8.11.1
     # via -r requirements.in
-ffmpy==0.2.3
+ffmpy==0.3.1
     # via -r requirements.in
-filelock==3.0.12
+filelock==3.13.1
     # via
     #   huggingface-hub
     #   torch
@@ -73,7 +75,7 @@ huggingface-hub==0.20.2
     #   sentence-transformers
     #   tokenizers
     #   transformers
-idna==2.10
+idna==3.6
     # via requests
 imageio==2.33.1
     # via scikit-image
@@ -89,13 +91,13 @@ jmespath==0.10.0
     # via
     #   boto3
     #   botocore
-joblib==1.2.0
+joblib==1.3.2
     # via
     #   nltk
     #   scikit-learn
 lazy-loader==0.3
     # via scikit-image
-markupsafe==2.1.3
+markupsafe==2.1.4
     # via
     #   jinja2
     #   werkzeug
@@ -105,7 +107,7 @@ networkx==3.2.1
     # via
     #   scikit-image
     #   torch
-nltk==3.6.6
+nltk==3.8.1
     # via
     #   sentence-transformers
     #   textblob
@@ -231,7 +233,7 @@ typing-extensions==4.9.0
     #   -r requirements.in
     #   huggingface-hub
     #   torch
-urllib3==1.26.18
+urllib3==2.0.7
     # via
     #   botocore
     #   elastic-transport
