chore: moving test files to a folder

--- a/src/api/.env-template
+++ b/src/api/.env-template
@@ -6,7 +6,7 @@ AWS_SECRET_ACCESS_KEY=XXXXX
 AWS_BUCKET=XXXXX
 S3_CREDENTIALS_PATH = XXXXX/XXXXX
 GOOGLE_APPLICATION_CREDENTIALS="credentials.json"
-ES_HOST=localhost
+ES_HOST=es
 ES_USERNAME=XXXXX
 ES_PASSWORD=XXXXX
 ES_IMG_INDEX=imgsearch
