Add audio operator to ES - Partially added es code for audio similarity operator - Renamed audio similarity features rmse operator

--- a/src/api/config-server.yml
+++ b/src/api/config-server.yml
@@ -45,3 +45,8 @@ operators :
       parameters: {
         index_name : "video"
       }
+    - name : "Audio Feature Representation"
+      type : "audio_similarity_features_rmse"
+      parameters: {
+        index_name : "audio"
+      }
