--- a/src/api/config-indexer.yml
+++ b/src/api/config-indexer.yml
@@ -36,3 +36,8 @@ operators :
       parameters: {
         index_name : "video"
       }
+    - name : "Audio Features Representation"
+      type : "audio_similarity_features_rmse"
+      parameters: {
+        index_name : "audio"
+      }
