--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -8,9 +8,9 @@
 
 blinker==1.7.0
     # via flask
-boto3==1.34.19
+boto3==1.34.34
     # via -r requirements.in
-botocore==1.34.19
+botocore==1.34.35
     # via
     #   boto3
     #   s3transfer
@@ -26,20 +26,14 @@ click==8.1.7
     # via
     #   -r requirements.in
     #   flask
-    #   nltk
 dacite==1.8.1
     # via -r requirements.in
 elastic-transport==8.11.0
     # via elasticsearch
 elasticsearch==8.11.1
     # via -r requirements.in
-ffmpy==0.3.1
-    # via -r requirements.in
 filelock==3.13.1
-    # via
-    #   huggingface-hub
-    #   torch
-    #   transformers
+    # via torch
 flask==2.3.2
     # via
     #   -r requirements.in
@@ -47,9 +41,7 @@ flask==2.3.2
 flask-cors==3.0.9
     # via -r requirements.in
 fsspec==2023.12.2
-    # via
-    #   huggingface-hub
-    #   torch
+    # via torch
 google-api-core[grpc]==1.34.0
     # via
     #   google-api-core
@@ -70,15 +62,8 @@ grpcio==1.60.0
     #   grpcio-status
 grpcio-status==1.36.1
     # via google-api-core
-huggingface-hub==0.20.2
-    # via
-    #   sentence-transformers
-    #   tokenizers
-    #   transformers
 idna==3.6
     # via requests
-imageio==2.33.1
-    # via scikit-image
 iniconfig==2.0.0
     # via pytest
 itsdangerous==2.1.2
@@ -92,12 +77,6 @@ jmespath==0.10.0
     # via
     #   boto3
     #   botocore
-joblib==1.3.2
-    # via
-    #   nltk
-    #   scikit-learn
-lazy-loader==0.3
-    # via scikit-image
 linkify-it-py==2.0.3
     # via markdown-it-py
 markdown-it-py[linkify,plugins]==3.0.0
@@ -118,39 +97,16 @@ memray==1.11.0
 mpmath==1.3.0
     # via sympy
 networkx==3.2.1
-    # via
-    #   scikit-image
-    #   torch
-nltk==3.8.1
-    # via
-    #   sentence-transformers
-    #   textblob
+    # via torch
 numpy==1.26.3
-    # via
-    #   imageio
-    #   opencv-python-headless
-    #   scikit-image
-    #   scikit-learn
-    #   scipy
-    #   sentence-transformers
-    #   tifffile
-    #   torchvision
-    #   transformers
-opencv-python-headless==4.9.0.80
-    # via -r requirements.in
+    # via torchvision
 packaging==23.2
-    # via
-    #   huggingface-hub
-    #   pytest
-    #   scikit-image
-    #   transformers
+    # via pytest
 pika==1.3.2
     # via -r requirements.in
 pillow==10.2.0
     # via
     #   -r requirements.in
-    #   imageio
-    #   scikit-image
     #   torchvision
 pluggy==1.3.0
     # via pytest
@@ -180,20 +136,11 @@ python-dateutil==2.8.1
 python-dotenv==1.0.0
     # via -r requirements.in
 pyyaml==6.0.1
-    # via
-    #   -r requirements.in
-    #   huggingface-hub
-    #   transformers
-regex==2023.12.25
-    # via
-    #   nltk
-    #   transformers
+    # via -r requirements.in
 requests==2.31.0
     # via
     #   google-api-core
-    #   huggingface-hub
     #   torchvision
-    #   transformers
 rich==13.7.0
     # via
     #   memray
@@ -202,21 +149,6 @@ rsa==4.7.2
     # via google-auth
 s3transfer==0.10.0
     # via boto3
-safetensors==0.4.1
-    # via transformers
-scikit-image==0.22.0
-    # via -r requirements.in
-scikit-learn==1.1.3
-    # via sentence-transformers
-scipy==1.11.4
-    # via
-    #   scikit-image
-    #   scikit-learn
-    #   sentence-transformers
-sentence-transformers==2.2.2
-    # via -r requirements.in
-sentencepiece==0.1.99
-    # via sentence-transformers
 six==1.15.0
     # via
     #   flask-cors
@@ -224,38 +156,16 @@ six==1.15.0
     #   python-dateutil
 sympy==1.12
     # via torch
-textblob==0.17.1
-    # via -r requirements.in
 textual==0.48.2
     # via memray
-threadpoolctl==2.1.0
-    # via scikit-learn
-tifffile==2023.12.9
-    # via scikit-image
-tokenizers==0.15.0
-    # via transformers
 torch==2.1.2+cpu
     # via
     #   -r requirements.in
-    #   sentence-transformers
     #   torchvision
 torchvision==0.16.2+cpu
-    # via
-    #   -r requirements.in
-    #   sentence-transformers
-tqdm==4.66.1
-    # via
-    #   -r requirements.in
-    #   huggingface-hub
-    #   nltk
-    #   sentence-transformers
-    #   transformers
-transformers==4.36.0
-    # via sentence-transformers
+    # via -r requirements.in
 typing-extensions==4.9.0
     # via
-    #   -r requirements.in
-    #   huggingface-hub
     #   textual
     #   torch
 uc-micro-py==1.0.2
