--- a/src/api/requirements.in
+++ b/src/api/requirements.in
@@ -2,8 +2,6 @@ flask==2.3.2
 flask_cors==3.0.9
 google-cloud==0.34.0
 google-cloud-vision==3.5.0
-torch==2.1.2+cpu
-torchvision==0.16.2+cpu
 Pillow==10.2.0
 elasticsearch==8.11.1
 wget==3.2
@@ -16,3 +14,4 @@ PyYAML==6.0.1
 dacite==1.8.1
 memray==1.11.0  # dev
 pyinstrument==4.6.2
+numpy==1.26.3
