- Added chmod executable for all scripts in image and vid dockerfiles

--- a/src/api/Dockerfile.vid_vec_rep_resnet
+++ b/src/api/Dockerfile.vid_vec_rep_resnet
@@ -16,4 +16,6 @@ RUN pip install --no-cache-dir --user -r requirements.txt
 COPY . /app
 RUN chmod +x video_vec_operator_cprofile.sh
 RUN chmod +x video_vec_operator_time.sh
+RUN chmod +x video_vec_operator_profile_memray.sh
+RUN chmod +x video_vec_operator_profile_pyinstrument.sh
 CMD tail -f /dev/null
