--- a/src/api/Dockerfile.image_vec_rep_resnet
+++ b/src/api/Dockerfile.image_vec_rep_resnet
@@ -14,4 +14,6 @@ WORKDIR /app
 COPY ./core/operators/image_vec_rep_resnet_requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir --user -r requirements.txt
 COPY . /app
+RUN chmod +x image_vec_operator_profile_memray.sh
+RUN chmod +x image_vec_operator_profile_pyinstrument.sh
 CMD tail -f /dev/null
